Small template tweak

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,8 @@
     <div class="page-wrapper">
         <section class="hero">
             <h1>Energy-Efficient Wildlife Tracking Using a Splay Tree Inspired Clustering Policy and Vision-Aided
-                Analytics</h1>
+                Analytics
+            </h1>
             <p>Advanced Sensor Cluster Simulation & Visualization<br>Powered by Splay Network Algorithms</p>
         </section>
 
